<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BloodDonor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="log_out">Log out</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? Signup</string>
    <string name="welcome">Welcome</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot password</string>
    <string name="reset_password">Reset Password</string>
    <string name="email">Email</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="email_2">Email</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="location">Location</string>
    <string name="settings_fragment">Settings</string>

    <string-array name="blood_types">
        <item>A RhD positive (A+)</item>
        <item>A RhD negative (A-)</item>
        <item>B RhD positive (B+)</item>
        <item>B RhD negative (B-)</item>
        <item>O RhD positive (O+)</item>
        <item>O RhD negative (O-)</item>
        <item>AB RhD positive (AB+)</item>
        <item>AB RhD negative (AB-)</item>
    </string-array>

</resources>